--- a/Models/-VC/2025.09.21_MaskVCT.md
+++ b/Models/-VC/2025.09.21_MaskVCT.md
@@ -203,3 +203,92 @@ We utilize a simple Transformer encoder-based architecture \cite{transformer}, e
 For simplicity, FFNs use a ReLU activation and LayerNorm.
 
 After the 16 Transformer encoder layers, each with 16 attention heads, model dimension of 1024, FFN dimension of 4096, we attach separate classification heads for each codebook index.
+
+## 3·Experiments
+
+### Baselines
+
+For our baseline, we utilized the official implementation and checkpoint of Diff-HierVC\footnote{\url{https://github.com/hayeong0/Diff-HierVC}} \cite{diffhiervc}, FACodec\footnote{\url{https://hf.co/amphion/naturalspeech3_facodec}} \cite{naturalspeech3,amphion}, MaskGCT\footnote{\url{https://hf.co/amphion/MaskGCT}} \cite{maskgct},  FreeVC\footnote{\url{https://github.com/OlaWod/FreeVC}} \cite{freevc}, GenVC\footnote{\url{https://github.com/caizexin/GenVC}}~\cite{genvc}.
+
+For accent conversion, we only tested the models that achieved the best objective metrics in the main evaluation.
+
+Table [tab:baselines](#tab:baselines) shows the number of parameters and training dataset hours for each models. 
+
+<a id="tab:baselines">Comparison of baseline models and ours with number of parameters and training hours.
+The parentheses next to parameters indicate the number of parameters pre-trained models they utilized.
+The parentheses next to the hour are the total hours spent training the linguistic feature extractor.</a>
+
+### Training
+
+We employ the official checkpoint of the DAC 16 kHz \cite{dac} as a codec, from which we extract 9 codebook indices to encode each audio frame.
+
+For syllabic representations, we use SylBoost 8.33 Hz \cite{syllablelm}, which has a minimum of tokens.
+
+To improve robustness to phase-related inconsistency \cite{inconsistency}, we apply PhaseAug \cite{phaseaug} to all inputs before DAC encoder. 
+Although SylBoost yields consistent features, self-reconstruction can leak information \cite{nansy}; thus, following NANSY \cite{nansy}, we pitch-shift clean speech to create perturbed variants and train with a 50\% property for each case.
+
+We trained our model from scratch for 250k steps on 2 A100 GPUs using AdamW with a batch size of 168 and a learning rate of 0.0002.
+
+Additionally, both the layer drop rate and the dropout rate were set to 5\%.
+
+We apply SpecAugment \cite{specaugment} to combined embeddings by randomly masking 10\% of the channel dimension of the input vectors.
+
+For all cases, we utilize 3-second speaker prompts and 10.24-second as the source.
+
+### Dataset
+
+Our model was trained on diverse speech corpora to enhance its generalization across accents and speaking styles.
+
+Specifically, we utilized the train-clean subsets of LibriTTS‑R \cite{librittsr}, the train subset of MLS‑en \cite{mls}, VCTK \cite{vctk}, LibriHeavy-Large \cite{librilight,libriheavy}, the clean subset of HiFi‑TTS \cite{hifitts}, LJSpeech \cite{ljspeech}, and the speech subset of RAVDESS \cite{ravdess}.
+
+We utilized the test-clean subset of LibriTTS-R \cite{librittsr} to test the general performance of VC models. 
+Since the models were not trained with the long length, we select the speeches that are shorter than 10 seconds and slice 3 seconds for the prompt speeches.
+
+We test the models with 511 sample pairs.
+
+To assess accent conversion performance, we utilize the non-native English speech corpus L2-ARCTIC \cite{l2arctic}. 
+Two conversion directions are considered:
+{Libri$\rightarrow$L2}: converting from near-native LibriTTS-R speech to accented speech, and {L2$\rightarrow$L2}: conversion between distinct accents.
+
+Test utterance pairs were selected using the same criteria as in the main test.
+
+Additionally, while the ground truth (GT) exhibits low intelligibility, we omit intelligibility metrics for this test.
+
+<a id="tab:results_main">Evaluation results for MaskVCT and the baseline methods on the LibriTTS-R test-clean dataset.</a>
+
+<a id="tab:accent">Accent Conversion Results, the audios are converted from **Libri**TTS-R or **L2**-ARCTIC to L2-ARCTIC.</a>
+
+### Inference Setup
+
+\label{section:exp_inference}
+
+During every iteration, we select the top probability positions by Gumbel-Softmax \cite{gumbel} following the number of cosine mask schedules.
+
+For each chosen position, we sample token indices to unmask using top-$k$ ($k=35$) followed by top-$p$ ($p=0.9$).
+
+We mainly evaluate the total $N=64$ iterations with per-codebook steps [40,16, 2,1,1,1,1,1,1].
+
+Since MaskVCT supports multiple modes, we evaluated a wide range of ablation studies for the large search space of CFG weights to identify the optimal CFG weights for each condition.
+
+From these experiments, we propose two primary modes: **MaskVCT-All** and **MaskVCT-Spk**.
+
+MaskVCT-All is conditioned by continuous linguistic features with CFG weights $(\omega_\text{all}, \omega_\text{spk}, \omega_\text{ling})=(1.5,\,1.0,\,1.0)$ including pitch-conditioned weights, it achieves superior intelligibility and source pitch-following but sacrifices some speaker similarity.
+
+MaskVCT-Spk is conditioned by quantized linguistic features with 
+CFG weights $(\omega_\text{all}, \omega_\text{spk}, \omega_\text{ling})=(0,\,2.0,\,0.5)$ omitting pitch conditioning yields the highest speaker similarity, though intelligibility is reduced.
+
+For the accent conversion, we found that pitch-conditioned generation was affected by the L2-ARCTIC dataset's ambient noise, so we only tested MaskVCT-Spk with $(\omega_\text{all}, \omega_\text{spk}, \omega_\text{ling})=(0,2.5,0.5)$.
+
+### Metrics
+
+We assess intelligibility with WER/CER from Whisper large-v3 \cite{whisper}, speaker similarity (S-SIM) as the cosine between WavLM speaker embeddings of the converted utterance and the target prompt \cite{wavlm}, pitch tracking via the F0 Pearson correlation (FPC), and automatic quality via UTMOS v2 \cite{utmosv2}.
+
+Note that FPC is condition-dependent: higher is better for pitch-conditioned models, whereas for pitch-unconditioned models, whose goal is generating pitch from a prompt, a lower FPC can be preferable.
+
+For the accent conversion, we measure accent similarity (A-SIM) by CommonAccent \cite{commonaccent}.
+
+For the subjective measures, we collect human-evaluated mean opinion scores (MOS) from 1 to 5 for quality (Q-MOS), speaker similarity (SS-MOS).
+
+Especially for the accent conversion test, we also collect accent similarity (AS-MOS).
+
+For all MOS, we also show 95\% confidence intervals (CI).
