--- a/Models/-VC/2025.09.21_MaskVCT.md
+++ b/Models/-VC/2025.09.21_MaskVCT.md
@@ -324,3 +324,25 @@ All systems except MaskVCT tend to preserve the original LibriTTS's American or 
 In the L2$\rightarrow$L2, MaskGCT-S2A again tops UTMOS with MaskVCT-Spk close behind, and MaskVCT-Spk attains the highest SS-MOS and matches baselines on AS-MOS.
 
 Overall, MaskVCT-Spk offers the strongest speaker and accent fidelity while maintaining competitive listening quality.
+
+## 5·Conclusion
+
+We present MaskVCT, a zero-shot voice conversion system that delivers unprecedented multi‑factor controllability through multiple classifier‑free guidances.
+
+Unlike conventional VC methods, which are limited to a single conditioning setup, such as continuous vs. quantized linguistic features or pitch‑conditioned vs. unconditioned, MaskVCT integrates diverse conditions in a single model.  
+This controllability and the state-of-the-art speaker similarity are enabled by the syllabic representation, which leaks less pitch information with the lowest FPC results, while other linguistic features exhibit greater leakage.
+
+However, despite their advantages, both continuous and quantized syllabic representations can degrade intelligibility by causing misreadings, as they are not trained to reconstruct original speech. 
+Moreover, because the syllabic quantizer is determined by K-means clustering \cite{syllablelm,sylber}, misreadings caused by incorrect syllable mappings cannot be easily corrected.
+
+In future work, we plan to address this limitation by training our own quantized representation using vector quantization with masked model training, aiming to preserve the benefits of the syllable representations while reducing intelligibility errors.
+
+\vfill\pagebreak\newpage
+\vfill\pagebreak
+\newpage
+\bibliographystyle{IEEEbib_abbrev}
+{\footnotesize
+\bibliography{main}}
+
+\end{document}
+
